updated the readme  instructions